--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "sass": "^1.58.0",
     "the-new-css-reset": "^1.8.3",
     "typescript": "^4.9.5",
+    "util": "^0.12.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
